--- a/Slides-Files/Slides/00-Formelles_master.tex
+++ b/Slides-Files/Slides/00-Formelles_master.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Compile: PDFLaTeX BibTeX PDFLaTeX PDFLaTeX
+%% Compile: XeLaTeX BibTeX XeLaTeX XeLaTeX
 %% Course Slides: Wissenschaftliches Arbeiten
 %% Antonio Machicao y Priemer
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
