--- a/Slides-Files/Slides/02-LaTeX02_master.tex
+++ b/Slides-Files/Slides/02-LaTeX02_master.tex
@@ -1,11 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Compile: PDFLaTeX BibTeX PDFLaTeX PDFLaTeX
-%% Course Slides: Wissenschaftliches Arbeiten
+%% Compile: XeLaTeX BibTeX XeLaTeX XeLaTeX
+%% Course Slides: LaTeX 4 Linguists -- LOT 2019, Amsterdam
 %% Antonio Machicao y Priemer
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[a4paper,10pt, bibtotoc]{beamer}
-%\documentclass[a4paper,10pt,handout]{beamer}
+%\documentclass[a4paper,10pt, bibtotoc]{beamer}
+\documentclass[a4paper,10pt,handout]{beamer}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %% PACKAGES & COMMANDS 
@@ -22,8 +22,8 @@
 
 \begin{document}
 
-	\togglefalse{handout}
-%	\toggletrue{handout}
+%	\togglefalse{handout}
+	\toggletrue{handout}
 
 \input{02-LaTeX02_text}
 
